# gpt-fusion

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  README.md  _config.yml  agents.md  demo.html  eslint.config.js  index.md  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  docs_improvement.md  feature_request.yml
.github/workflows/: ci.yml  pages.yml
_layouts/: default.html
_site/: LICENSE  README.md  index.html  package-lock.json  pyproject.toml  requirements-dev.txt  robots.txt  sitemap.xml
_site/assets/css/: style.css.map
_site/auth-ui-kit/: index.html
_site/examples/: tutorial.py
_site/src/gpt_fusion/: analysis.py  core.py  projects.py  twitter_bot.py  web_scraper.py
_site/tests/: test_backend.py  test_build_utils.py  test_core.py  test_init.py  test_optional_components.py  test_starter_kits.py  test_twitter_bot.py  test_utils.py  test_web_scraper.py
_site/unity-prototype/: README.md
_site/unity-prototype/Assets/Scripts/: EnemyAI.cs  Health.cs  PlayerController.cs  Projectile.cs  SceneLoader.cs
auth-ui-kit/: FIREBASE_SETUP.md  README.md  app.js  enhanced-README.md  enhanced-app.js  enhanced-index.html  index.html  tests.html
data/: README.md
docs/: Gemfile  README.md  _config.yml  _headers  api-playground.md  contributing.md  guidelines.md  index.md  projects.md  sustainability.md  tutorial.md
docs/_includes/: head-custom.html  nav.html
docs/assets/css/: style.scss
docs/assets/js/: anchor-links.js  bundle.js  external-links.js  playground.js  toc.js
docs/marketing-site/: index.html  main.js
docs/unity-demo/: index.md
examples/: README.md  hello_world.ipynb  tutorial.py
marketing-site/: index.html  styles.css
scripts/: run_checks.py
src/gpt_fusion/: __init__.py  __main__.py  analysis.py  backend.py  build_utils.py  config.py  core.py  exceptions.py  projects.py  starter_kits.py  text_utils.py  twitch.py  twitter_bot.py  utils.py  web_scraper.py
tests/: conftest.py  test_analysis.py  test_backend.py  test_build_utils.py  test_init.py  test_main.py  test_optional_components.py  test_performance_optimizations.py  test_security_and_edge_cases.py  test_starter_kits.py  test_text_utils.py  test_twitch.py  test_twitter_bot.py  test_utils.py  test_web_scraper.py
top-viewer-games/: README.md  viewer.py
unity-prototype/: .gitattributes  README.md  UNITY_SETUP_GUIDE.md
unity-prototype/Assets/Scripts/: AudioManager.cs  CameraController.cs  GameManager.cs  InputManager.cs  Inventory.cs  ItemPickup.cs  PauseMenu.cs  PowerUp.cs  SpawnManager.cs  UIController.cs
unity-prototype/Assets/Scripts/Components/: ModernHealth.cs  ModernProjectile.cs
unity-prototype/Assets/Scripts/Controllers/: ModernPlayerController.cs
unity-prototype/Assets/Scripts/Interfaces/: IDamageable.cs  IHealth.cs  IPooledObject.cs
unity-prototype/Assets/Scripts/Managers/: ModernGameManager.cs
unity-prototype/Assets/Scripts/QuirkyDemo/: DemoController.cs  QuirkyCollectible.cs
unity-prototype/Assets/Scripts/ScriptableObjects/: GameConfig.cs
unity-prototype/Assets/Scripts/Systems/: AchievementSystem.cs  ObjectPool.cs  ParticleEffectManager.cs  SaveSystem.cs  SettingsManager.cs
unity-prototype/Assets/Scripts/UI/: AchievementPopup.cs  ModernUIController.cs
unity-prototype/ProjectSettings/: ProjectVersion.txt
