[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
# Plan: publish an alpha build so users can `pip install gpt-fusion`.
name = "gpt-fusion"
version = "0.0.1a0"
description = "Experimenting with human-AI collaboration"
authors = [{name="Costas Ford", email="costasford@yahoo.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
backend = [
    "fastapi",
    "httpx<0.25",
]
twitter = [
    "tweepy",
]
web = [
    "requests",
    "beautifulsoup4",
]
build = [
    "htmlmin",
    "csscompressor",
    "jsmin",
    "brotli",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"

[tool.black]
line-length = 88
